# melo-airplay

./: README  README.md  configure.ac  meson.build
debian/: changelog  control  copyright
src/: Makefile.am  gstrtpraop.c  gstrtpraop.h  gstrtpraopdepay.c  gstrtpraopdepay.h  gsttcpraop.c  gsttcpraop.h  melo_airplay.c  melo_airplay_pkey.h  melo_airplay_player.c  melo_airplay_player.h  melo_airplay_plugin.c  melo_airplay_rtsp.c  melo_airplay_rtsp.h  melo_player_airplay.c  meson.build
